# xbox_iso_extractor

./: .gitignore  README.md  build.sh  pubspec.yaml
lib/: main.dart
lib/src/screens/: main_screen.dart
lib/src/services/: iso_service.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
src/native/: CMakeLists.txt  build.sh  xiso.cpp
src/native/include/: xiso.h
src/native/src/: test_xiso.c  xiso.c
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
